err/products.relations.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/Relations'...
Listing './lib/python3.5/site-packages/Products/Relations/Extensions'...
Compiling './lib/python3.5/site-packages/Products/Relations/brain.py'...
***   File "./lib/python3.5/site-packages/Products/Relations/brain.py", line 33
    raise KeyError, key
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/Relations/components'...
Compiling './lib/python3.5/site-packages/Products/Relations/components/cardinality.py'...
***   File "./lib/python3.5/site-packages/Products/Relations/components/cardinality.py", line 100
    except exception.ValidationException, e:
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/Relations/components/contentreference.py'...
***   File "./lib/python3.5/site-packages/Products/Relations/components/contentreference.py", line 110
    raise ValueError,"%s has no portal type set." % self.absolute_url()
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/Relations/doc'...
Listing './lib/python3.5/site-packages/Products/Relations/model'...
Listing './lib/python3.5/site-packages/Products/Relations/profiles'...
Listing './lib/python3.5/site-packages/Products/Relations/profiles/default'...
Listing './lib/python3.5/site-packages/Products/Relations/profiles/default/types'...
Compiling './lib/python3.5/site-packages/Products/Relations/ruleset.py'...
***   File "./lib/python3.5/site-packages/Products/Relations/ruleset.py", line 428
    raise ValueError, "No ruleset with id %r" % id
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/Relations/skins'...
Listing './lib/python3.5/site-packages/Products/Relations/skins/relations'...
Compiling './lib/python3.5/site-packages/Products/Relations/skins/relations/relations_adddelete_vocab.py'...
***   File "./lib/python3.5/site-packages/Products/Relations/skins/relations/relations_adddelete_vocab.py", line 13
    return adddeleteVocab(context, test_only, ruleset_ids)
                                                         ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/Relations/skins/relations/relations_listrefs.py'...
***   File "./lib/python3.5/site-packages/Products/Relations/skins/relations/relations_listrefs.py", line 26
    return value
               ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/Products/Relations/skins/relations_images'...
Listing './lib/python3.5/site-packages/Products/Relations/tests'...
Compiling './lib/python3.5/site-packages/Products/Relations/tests/framework.py'...
***   File "./lib/python3.5/site-packages/Products/Relations/tests/framework.py", line 69
    print 'Unable to locate Testing package.',
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/Relations/utils.py'...
***   File "./lib/python3.5/site-packages/Products/Relations/utils.py", line 46
    raise ValueError, "Type %s does not implement any of %s." % \
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products.Relations-0.8.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
